# playground-middleware

./: Cargo.toml  LICENSE
example/: Cargo.toml
example/files/: index.html
example/src/: main.rs
src/: cache.rs  guess_content_type.rs  http_to_https_redirect.rs  lib.rs  logging.rs  modify_with.rs  prefix.rs  rewrite.rs  staticfile.rs
