[package]
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
name = "playground-middleware"
version = "0.1.0"

[dependencies]
csv = "0.15.0"
iron = "0.5.1"
log = "0.3.6"
mime = "0.2.2"
mime_guess = "1.8.0"
rustc-serialize = "0.3.19"
time = "0.1.35"
url = "1.4.0"

[dev-dependencies]
hyper = "0.10.4"
iron-test = "0.5.0"
tempdir = "0.3.5"
